INDIGO-326 Fix scrollbar issue FF

--- a/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
@@ -467,7 +467,9 @@
 			.x-viewport-adminmode & {
 				margin-top: 52px;
 				height: calc(100% - 226px)!important;
-				overflow-y: scroll;
+				overflow: auto;
+				overflow-x: hidden;
+}
 			}
 
 			body[data-sitesettings="true"] .x-viewport-editmode & {
